--- a/QuickApp.Pro/ClientApp/app/styles.scss
+++ b/QuickApp.Pro/ClientApp/app/styles.scss
@@ -18,6 +18,10 @@ $theme: mat-light-theme($primary, $accent);
 //@import './mycustom-style.css';
 
 
+.hidedata{
+    display: none;
+}
+
 .nav-container {
     display: flex;
     flex-direction: column;
@@ -13541,4 +13545,17 @@ body .ui-datepicker table td > a.ui-state-active {
 }
 .pas-table-cstm tr th {
     padding: 8px 4px !important;
+}
+.multi-general p-multiselect {
+    width: 207px;
+}
+.multi-general p-multiselect .ui-multiselect { 
+    width: 106%;
+}
+.capes-view-btn .fa {
+    color: blue !important;
+}
+.multi-general p-multiselect[_ngcontent-c234]{
+    width: 207px !important;
+    height: 27px !important;
 }
